# text-to-video

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  K8s.md  MANUAL_TESTING.md  README.md  pyproject.toml
.github/workflows/: build-bento.yml  build-fastapi.yml  ci-cd.yml  release.yml
apps/: .gitignore
apps/bento-service/: .dockerignore  Dockerfile  README.md  bentofile.yaml  install_genmo.sh  pyproject.toml  requirements.txt  setup.sh  start.sh
apps/bento-service/src/: service.py  service_mochi_hybrid.py  service_mochi_official.py  service_stable_diffusion.py
apps/fastapi-gateway/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/fastapi-gateway/src/: main.py
docs/: api.md  architecture.md  deployment.md
helm/text-to-video/: Chart.yaml  values.yaml
helm/text-to-video/templates/: NOTES.txt  _helpers.tpl  namespace.yaml  serviceaccount.yaml
helm/text-to-video/templates/bento-service/: deployment.yaml  hpa.yaml  inferenceservice.yaml  service.yaml
helm/text-to-video/templates/fastapi-gateway/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
helm/text-to-video/templates/storage/: model-weights-downloader-job.yaml  model-weights-pv.yaml  model-weights-pvc.yaml  pv.yaml  pvc.yaml
k8s-storage/: kserve-simple.yaml  local-storage-class.yaml
scripts/: build.sh  deploy.sh  test-api.sh
