[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bento-video-service"
version = "0.1.0"
description = "BentoML Text-to-Video Generation Service using Stable Diffusion XL and Stable Video Diffusion"
authors = [
    {name = "Dmitry Volkov", email = "the.dsvolk@icloud.com"},
]
dependencies = [
    "bentoml>=1.1.11",
    "torch>=2.8.0",
    "diffusers>=0.30.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "xformers>=0.0.28",
    "Pillow>=10.4.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.25.0",
    "numpy>=1.26.4",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 112
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 112
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
strict = true
