[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bento-video-service"
version = "0.1.0"
description = "BentoML Text-to-Video Generation Service using Stable Diffusion XL and Stable Video Diffusion"
authors = [
    {name = "Dmitry Volkov", email = "the.dsvolk@icloud.com"},
]
dependencies = [
    "bentoml>=1.1.11",
    "addict>=2.4.0",
    "av==13.1.0",
    "click>=8.1.7",
    "einops>=0.8.0",
    "gradio>=3.36.1",
    "moviepy==1.0.3",
    "omegaconf>=2.3.0",
    "pillow>=9.5.0",
    "pyyaml>=6.0.2",
    "ray>=2.37.0",
    "sentencepiece>=0.2.0",
    "setuptools>=70.0.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.45.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
flash = [
    "flash-attn>=2.6.3"
]
torchvision = [
    "torchvision>=0.15.0",
    "pyav>=13.1.0"
]

[tool.black]
line-length = 112
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 112
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
strict = true
