[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-video-gateway"
version = "0.1.0"
description = "FastAPI Gateway for Text-to-Video Generation Service"
authors = [
    {name = "Dmitry Volkov", email = "the.dmitry.s.volkov@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 112
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 112

[tool.mypy]
python_version = "3.12"
strict = true